--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Adopt Me!</title>
 </head>
-<body>
+<body><div id="modal"></div>
     <div id="root"> Not rendered</div>
     <script type="module" src="./App.js"></script>
 </body>
